--- a/Portfolio-styles.css
+++ b/Portfolio-styles.css
@@ -1,7 +1,7 @@
 /* Custom properties/variables */
 :root {
   --main-white: #f0f0f0;
-  --main-accent: #be3144;
+  --main-accent: purple;
   --main-inner: #45567d;
   --main-outer: #303841;
 }
