--- a/Projects/Cat Tribute Project/Cat styles.css
+++ b/Projects/Cat Tribute Project/Cat styles.css
@@ -47,7 +47,7 @@ html {
   
   #image {
     display: block;
-    max-width: 100%;
+    max-width: 640px;
     margin: 0 auto;
     height: auto;
   }
